tests/e2e/string_templates_path_error3.error
Error: syntax error in story at line 1, column 7

1|    c = "{2 / 1s}"
            ^

E0103: `/` between `int` and `time` is not supported.
