tests/e2e/string_templates_path_error3.story
c = "{2 / 1s}"
